--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
-
+*{
+    --background-sand: rgb(246,243,236);
+    --light-blue:rgb(56, 212, 202);
+}
 /* ------------ HEADER ------------ */
 header{
     display: flex;
@@ -6,8 +9,6 @@ header{
     flex-wrap:wrap;
     justify-content: space-between;
     align-items: center;
-    height:0px;
-    margin:0px;
 }
 
 .header{
@@ -23,7 +24,6 @@ nav {
 h1.header{
     font-size: 4rem;
     margin: 0;
-    padding: 1rem;
     font-weight:bold;
     font-family:Georgia, 'Times New Roman', Times, serif;
 
@@ -33,7 +33,6 @@ h1.header{
 
     background-image:url(pictures/seven-mile-beach.png);
     background-size:cover;
-    background-origin: border-box;
     background-position-y: 105%;
 
 }
@@ -42,77 +41,16 @@ h1.header{
 a {
     font-weight:bold;
     text-decoration:none;
-    color:rgb(56, 212, 202);
+    color:var(--light-blue)
 }
 
+
+
 a:hover{
-    color:rgb(246,243,236);
+    color: var(--background-sand);
 }
 
 /* ------------ MAIN ------------ */
-
-
-/* ------------ BIO/EXP/PORT. ------------ */
-
-.words{
-    display:flex;
-    flex-wrap:wrap;
-    flex-direction:row;
-    justify-content: space-around;
-    align-items: center;
-    
-}
-h1.bio, h1.experience, h1.portfolio {
-    
-    font-size: 5rem;
-    width:400px;
-    height:120px;
-    justify-content: center;
-    align-self: center;
-    text-align: center;
-    
-    /*setting transparent text against picture background */
-    
-
-    background-size: cover;
-    background-origin:border-box;
-    background-position: 40%;
-    background-position-y: 40%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    border-radius: 2rem;
-
-    
-}
-
-h1.bio {
-    background-image:url(pictures/music.jpeg);
-    background-position-y:20%;
-}
-
-h1.experience {
-    background-image:url(pictures/computer\ science.jpeg);
-    background-position-y:50%;
-}
-
-h1.portfolio {
-    background-image:url(pictures/galaxy.jpeg);
-    background-position-y:50%;
-}
-
-
-h1.bio:hover, h1.experience:hover, h1.portfolio:hover{
-    /*-webkit-text-fill-color:rgba(255, 255, 255);
-    -webkit-background-clip:border-box;*/
-    opacity: 0.5;
-    transition: opacity 2s;
-    
-    /*opacity: 1;*/
-   
-   
-    
-
-}
 
 /* ------------ ABOUT BAR ------------ */
 
@@ -123,25 +61,161 @@ h1.bio:hover, h1.experience:hover, h1.portfolio:hover{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color:rgb(246,243,236);
-    min-height: 275px;
-    margin-top:150px;
-}
-
-.aboutText{
-    color:rgb(103, 103, 103);
-    padding-left: 20px;
-    width: 450px;
-    /*max-inline-size:40vw;*/
-
+    background-color:var(--background-sand);
+    min-height: auto;
+    
 }
 
 .about img{
     height: 250px;
     border-radius: 10rem;
+    
+}
+
+.aboutText {
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    
+    color:rgb(103, 103, 103);
+    padding-left: 20px;
+    
+    /*max-inline-size:40vw;*/
+
+}
+
+.aboutBio{
+    width: 450px;
 }
 
 
+
+
+/* ------------ BIO/EXP/PORT. ------------ */
+
+.words{
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:row;
+    justify-content: center;
+    align-items: center;
+    padding:2rem;
+    
+}
+.card{
+    width:300px;
+    height: 300px;
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    margin:1rem;
+
+    border-radius: 2rem;
+
+    background-size: cover;
+    background-origin:border-box;
+    background-position: 40%;
+    background-position-y: 40%;
+}
+
+
+h1.bio, h1.experience, h1.portfolio {
+    font-size:3rem;
+    color:white;
+}
+
+h1.subpagecard {
+    font-size:9rem;
+}
+
+#bio {
+    background-image:url(pictures/music2.jpeg);
+    background-position-y:20%;
+    filter:grayscale(80%);
+}
+
+#experience {
+    background-image:url(pictures/computer\ science.jpeg);
+    background-position-y:50%;
+    filter:grayscale(80%);
+}
+
+#portfolio {
+    background-image:url(pictures/galaxy.jpeg);
+    background-position-y:50%;
+    filter:grayscale(80%);
+}
+
+.subpagecard {
+    width:100vw;
+    height: 300px;
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    margin:1rem;
+
+    border-radius: 2rem;
+
+    background-size: cover;
+    background-origin:border-box;
+    background-position: 40%;
+    background-position-y: 100%;
+    color:white;
+    /*-webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;*/
+}
+
+#bio:hover, #experience:hover, #portfolio:hover{
+    /*-webkit-text-fill-color:rgba(255, 255, 255);
+    -webkit-background-clip:border-box;*/
+     /*setting transparent text against picture background */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+    filter:grayscale(0%);
+    
+}
+
+.exp{
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:column;
+    justify-content: center;
+    align-items: flex-start;
+    padding:1rem;
+}
+
+.exp p {
+    padding-left:25px;
+}
+
+/* ------------ FOOTER ------------ */
+
+footer {
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    background-color: var(--background-sand);
+}
+
+footer a {
+    margin:1rem;
+}
+footer img {
+    height:50px;
+    filter:grayscale(30%);
+}
+
+footer img:hover{
+    filter:saturate(200%);
+
+}
 
 
 /* ------------ RESPONSIVE DESIGN ------------ */
@@ -149,12 +223,17 @@ h1.bio:hover, h1.experience:hover, h1.portfolio:hover{
 @media screen and (max-width:900px){
     header{
         flex-direction:column;
-        justify-content:flex-start;
-        width:vw;
+        justify-content:center;
+        align-items:center;
+        padding:.5rem;
     }
 
     h1.header {
         font-size:3rem;
+    }
+
+    nav a {
+        font-size:1rem;
     }
 
     main .about {
@@ -175,8 +254,24 @@ h1.bio:hover, h1.experience:hover, h1.portfolio:hover{
     }
 
     h1.bio, h1.experience, h1.portfolio {
-        font-size: 6rem;
+        font-size: 4rem;
+        
+    }
+    h1.subpagecard {
+        font-size: 4rem;
+        
+    }
+    .words{
+        padding:2rem;
+    }
+    .card {
+        width:100vw;
+        height:300px;
+    }
+
+    .subpagecard {
         width:100vw;
         height:200px;
+        padding:0rem;
     }
 }
